tests/negative/list_nested_range_inner_break_oob_index_assign.far
fun main() -> i64 {
  lst: List<i64> = List<i64>()
  for i in 0..<3 {
    for j in 0..<2 {
      if (j == 1) {
        break
      }
      lst.push(i * 10 + j)
    }
  }
  lst[3] = 9
  return 0
}
